[gd_scene load_steps=11 format=3 uid="uid://c3m8fesktmd85"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_dmm2o"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="1_tgmdf"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="2_ecomh"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/problem_set_list.gd" id="2_oi7x7"]
[ext_resource type="Texture2D" uid="uid://1qi6lr05g0vt" path="res://Textures/Buttons/icons/add.png" id="3_fyqnn"]
[ext_resource type="PackedScene" uid="uid://b6go021ha3ocr" path="res://Scenes and Scripts/UI/ProblemSelection/problem_set_item.tscn" id="3_vvwkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c33yr"]

[sub_resource type="Shader" id="Shader_tmadl"]
code = "shader_type canvas_item;

global uniform sampler2D colour_scheme: filter_nearest;
uniform float alpha: hint_range(0.0, 1.0);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = vec4(texture(colour_scheme, vec2(color.r, color.g)).rgb, color.a * alpha);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6khou"]
resource_local_to_scene = true
shader = SubResource("Shader_tmadl")
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e172d"]
resource_local_to_scene = true
shader = ExtResource("2_ecomh")
shader_parameter/alpha = 1.0

[node name="ProblemSetList" type="PanelContainer"]
material = ExtResource("1_dmm2o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -381.0
offset_bottom = -263.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_oi7x7")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c33yr")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ProblemContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ProblemSetItem" parent="ScrollContainer/VBoxContainer/ProblemContainer" instance=ExtResource("3_vvwkf")]
material = SubResource("ShaderMaterial_6khou")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="AddProblemSet" parent="ScrollContainer/VBoxContainer/MarginContainer" instance=ExtResource("1_tgmdf")]
material = SubResource("ShaderMaterial_e172d")
layout_mode = 2
size_flags_horizontal = 1
icon = ExtResource("3_fyqnn")
minimum_size = Vector2(2.08165e-12, 28)
icon_use_parent_material = true
action_mode = 1

[connection signal="pressed" from="ScrollContainer/VBoxContainer/MarginContainer/AddProblemSet" to="." method="_on_add_problem_set_pressed"]
